--- a/web/templates/location/index.html.eex
+++ b/web/templates/location/index.html.eex
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>St Night Bus</title>
+    <!-- <title>St Night Bus</title> -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Lato:300,700|Oswald|Fjalla+One|Raleway:200" rel="stylesheet" type="text/css" />
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="main"></div>
-    <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+    <!-- <script src="<%= static_path(@conn, "/js/app.js") %>"></script> -->
   </body>
 </html>
